# applied-stats-byu-2026

./: .gitignore  CLAUDE.md  index.qmd  main.py  pyproject.toml
.posit/assistant/: settings.json
code/: 02-word-game.R  02-word-game.py  04-word-game-reverse-app.py  05-vision.py  07-structured-output.py  08-batch.py  10-plot-noise.py  11-quiz-game-app.py  11-quiz-game-prompt.md  12-coding-assistant.py  13-quiz-game-tools-app.py  13-quiz-game-tools.R  13-quiz-game-tools.py  14-quiz-game-tools.R  14-quiz-game-tools.py  14-quiz-game-ui.R  14-quiz-game-ui.py  15-querychat.R  15-querychat.py  15-quiz-game-ui.R  15-quiz-game-ui.py  sratch.py
data/: i84_nw_2016_crashes.csv
data/recipes/: recipes.json
demo/01-clearbot/: README.md  app.py  pyproject.toml  requirements.txt
demo/02-models/: 02-models.qmd  README.md
demo/04-weather-tool/: 04-weather-tool-app.R  04-weather-tool.qmd
docs/: search.json  sitemap.xml
docs/slides/: 01-talking-with-llms.html  02-programming-with-llms.html  03-prompt-engineering.html  04-beyond-prompts.html  05-ai-coding-assistants.html
slides/: 03-prompt-engineering.qmd  04-beyond-prompts.qmd  05-ai-coding-assistants.qmd
